--- a/requirements.txt
+++ b/requirements.txt
@@ -5,30 +5,45 @@ anyio==3.7.1
 APScheduler==3.10.4
 async-timeout==4.0.3
 attrs==23.1.0
+cachetools==5.3.2
 certifi==2023.7.22
-charset-normalizer==3.3.0
+charset-normalizer==3.3.1
 dataclasses-json==0.6.1
+distro==1.9.0
 exceptiongroup==1.1.3
 faiss-cpu==1.7.4
 frozenlist==1.4.0
+google-api-core==2.17.1
+google-api-python-client==2.119.0
+google-auth==2.28.1
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.62.0
 greenlet==3.0.0
 h11==0.14.0
 httpcore==0.18.0
+httplib2==0.22.0
 httpx==0.25.0
 idna==3.4
 jsonpatch==1.33
 jsonpointer==2.4
 langchain==0.0.309
-langsmith==0.0.42
+langchain-core==0.1.26
+langchain-openai==0.0.7
+langsmith==0.1.8
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.0
-openai==0.28.1
+openai==1.12.0
+orjson==3.9.15
 packaging==23.2
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pydantic==2.4.2
 pydantic_core==2.10.1
 pydub==0.25.1
+pyparsing==3.1.1
 python-dotenv==1.0.0
 python-telegram-bot==20.6
 pytz==2024.1
@@ -36,14 +51,16 @@ PyYAML==6.0.1
 regex==2023.10.3
 requests==2.30.0
 rfc3986==1.5.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
 tenacity==8.2.3
-tiktoken==0.3.3
+tiktoken==0.6.0
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzlocal==5.2
+uritemplate==4.1.1
 urllib3==2.0.6
 yarl==1.9.2
